# typecheck-runner

./: .copier-answers.yml  .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .pre-commit-hooks.yaml  .pylintrc.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  justfile.rej  noxfile.py  noxfile.py.rej  pyproject.toml  pyproject.toml.rej  ruff.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/actions/: setup-cached-uv-and-python.yml
.github/actions/setup-cached-uv-and-python/: action.yml
.github/workflows/: build.yml  cd.yml  ci.yml  copier-update.yml  cruft-update.yml  pin-actions.yml  publish.yml  release-auto.yml  release.yml  update-copier.yml  update-cruft.yml  update-package-version.yml
changelog.d/: 20260114_152740_wpk_add_which.md
config/: recipe-append.yaml
docs/: conf.py
docs/examples/: example-usage.md
docs/reference/: index.md
examples/usage/: demo.ipynb
requirements/: py310-test-extras.yaml  py310-test.yaml  py311-test-extras.yaml  py311-test.yaml  py312-test-extras.yaml  py312-test.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py314-dev.yaml  py314-test-extras.yaml  py314-test.yaml  py39-test-extras.yaml  py39-test.yaml  uvx-tools.txt
requirements/lock/: uvx-tools.txt
src/typecheck_runner/: __init__.py  __init__.py.rej  __main__.py  cli.py  typecheck_runner.py
tests/: __init__.py  test_smoke.py  test_typecheck_runner.py  test_typecheck_runner.py.rej
tools/: check_dist_version.py  check_dist_version.py.rej  cog_runner.py.rej  cog_utils.py  dataclass_parser.py.rej  notebook.just  notebook.just.rej  shared.just
