[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.8.22,<0.10.0",
]

[project]
name = "typecheck-runner"
version = "0.1.5"
description = "Unified api to multiple typecheckers"
readme = "README.md"
keywords = [
    "typecheck-runner",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=25.0",
]
[project.scripts]
typecheck-runner = "typecheck_runner.typecheck_runner:main"
[project.urls]
Homepage = "https://github.com/wpk-nist-gov/typecheck-runner"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "tomli; python_version<'3.11'",
    { include-group = "pytest" },
]
# other packages/tools
basedpyright = [ "basedpyright>=1.31.3" ]
cog = [ "cogapp" ]
ipython = [ "ipython" ]
mypy = [ "mypy>=1.15.0", "orjson" ]
notebook = [ "ipykernel" ]
nox = [ "nox>=2025.5.1" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
# other environments
test-extras = [
    { include-group = "test" },
]
typecheck = [
    { include-group = "pylint" },
    { include-group = "pytest" },
]

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.7.15"

[tool.uv.build-backend]
source-include = [ "tests/**" ]

[tool.uv.dependency-groups]
dev.requires-python = ">=3.14"
# other tools
cog.requires-python = ">=3.14"
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
notebook.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

[tool.uv.pip]
annotation-style = "line"
generate-hashes = true

# * Checks ---------------------------------------------------------------------

[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # using typos
    "PC170",  # pygrep
    "PY004",  # no docs for simple tool
]

[tool.check-wheel-contents]
toplevel = [ "typecheck_runner" ]
src_dir = [ "src" ]

[tool.pyproject-fmt]
indent = 4
# max_supported_python = "3.13"
keep_full_version = true
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
]
collapse_tables = [  ]

[tool.typos.default.extend-identifiers]
CPY = "CPY"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "tests",
    "typecheck_runner",
]
minversion = "8"
log_cli_level = "INFO"
log_level = "INFO"
strict_xfail = "true"
filterwarnings = [ "error" ]

[tool.coverage.paths]
source = [
    "src/",
    # required for installed package doctests
    ".nox/**/site-packages/",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
    "if __name__",
]
omit = [
    "*/_typing.py",
    "*/vendored/*",
]
include = [
    "src/*",
]

[tool.coverage.run]
branch = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
check_untyped_defs = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.pyrefly]
project-includes = [ "src", "tests" ]
enabled-ignores = [ "pyrefly" ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
typeCheckingMode = "strict"
# typeCheckingMode = "standard"
# strict = [
#     "src",
#     "tests",
#     "noxfile.py",
#     "tools/*.py",
# ]
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
# Extra flags
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"

deprecateTypingAliases = true
enableReachabilityAnalysis = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
# reportMissingSuperCall = true
reportUninitializedInstanceVariable = true
reportUnusedCallResult = true

# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateUsage = false                # dupe of PLC2701
reportPrivateImportUsage = false          # dupe of PLC2701
reportUnusedImport = false                # dupe of F401
reportUnusedVariable = false              # dupe of F841

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnusedCallResult = false

[tool.ty.analysis]
# Disable support for `type: ignore` comments
respect-type-ignore-comments = false

[tool.ty.src]
include = [ "src", "tests" ]

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.pre-commit-additional-dependencies]
reqs = [
    "rust-just",
]
groups = [
    "cog",
]
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=2.5.5",
    "copier",
    "copier-template-extensions>=0.3.1",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit-uv",
    "pre-commit>=4.0.0",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty>=0.0.14",
]
groups = [
    "basedpyright",
    "cog",
    "mypy",
    "nox",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
